Wed Apr 14 18:11:00 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.2.

	* Added some more point checking tests to malloc_str.  Added
	MALLOC_SIZE to some more places.  Completely ifdef'ed compat.h.
	If cannot open logfile, now it complains and continues.  Removed
	stdarg from malloc_dbg.

Fri Apr  9 01:50:17 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.1.

	* Made various other changes.  Backed out some printf changes.
	Added SIZE_T defines and fixed up STDC defines.

Thu Apr  8 17:41:59 1993  Gray Watson  (gray at toaster.antaire.com)

	* Changed to void * internally from char * and put STDC defines in
	malloc.h for ANSI folks.  Why did the ANSI idiots drop the return
	value from free?  Dumb!

	* Made a number of changes per suggestions from the net.  Added
	some size_t defines for AIX junk (that's right scott junk).  Cut
	down on the continuation strings, fixed some README and mallocrc
	goofs, etc.  Thanks to all.

Tue Apr  6 00:46:45 1993  Gray Watson  (gray at toaster.antaire.com)

	* version 1.2.0 posted to comp.sources.unix.

	* Upgraded to version 1.2.0.  Ready for 2nd release to
	comp.sources.unix.  Lots of work on the manual.

Mon Apr  5 18:28:05 1993  Gray Watson  (gray at toaster.antaire.com)

	* Finished adding token "check-funcs" to check the arguments of
	some common string functions to see whether they are in the heap.
	if so it tries to verify that the pointers are good.

Sun Apr  4 21:24:45 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added token "log-unknown" to dump non-free unknown pointers as
	well as known ones.  Also cleaned up the displaying of the
	pointers.

	* comp.sources.unix is almost ready to post so lots of last minute
	cleanups in the manual, etc.

	* Started integration of function argument checking.

Tue Mar 30 19:36:27 1993  Gray Watson  (gray at toaster.antaire.com)

	* Changed malloc.h defines so malloc routines are handled as well
	as the ALLOC macros.
