@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the Malloc library.
-# $Id: Makefile.all.in,v 1.13 1993/04/09 06:34:28 gray Exp $
+# $Id: Makefile.all.in,v 1.14 1993/04/15 21:57:50 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -19,9 +19,9 @@ DEFS =
 # for non ansi-c folks
 # DEFS = -Dconst=""
 INCS = -I$(srcdir)
-LIBS = @LIBS@ -L$(srcdir) -lmalloc
+LIBS = @LIBS@ -L$(srcdir) -lmalloc_dbg
 
-LIBRARY	= libmalloc.a
+LIBRARY	= libmalloc_dbg.a
 UTIL = malloc_dbg
 INFOFILE = malloc.info
 
@@ -38,7 +38,7 @@ INSTALL_DATA = @INSTALL_DATA@
 
 SHELL = /bin/sh
 
-HFLS = malloc.h
+HFLS = malloc_dbg.h
 OBJS = chunk.o compat.o error.o heap.o malloc.o malloc_lp.o malloc_str.o
 
 CFLAGS = $(CCFLAGS)
@@ -101,19 +101,19 @@ malloc_t : malloc_t.o $(LIBRARY)
 # These dependencies are automatically generated.  Do not edit by hand.
 #
 
-chunk.o : chunk.c malloc.h malloc_loc.h chunk.h chunk_loc.h compat.h conf.h \
-  dbg_values.h error.h error_val.h heap.h version.h 
-compat.o : compat.c malloc.h malloc_loc.h compat.h conf.h 
-error.o : error.c malloc.h malloc_loc.h chunk.h compat.h conf.h dbg_values.h \
-  error.h 
-heap.o : heap.c malloc.h malloc_loc.h chunk.h compat.h conf.h error.h error_val.h \
-  heap.h 
-malloc.o : malloc.c malloc.h malloc_loc.h chunk.h compat.h conf.h dbg_values.h \
-  error.h error_str.h error_val.h heap.h malloc_lp.h 
-malloc_dbg.o : malloc_dbg.c malloc.h malloc_loc.h compat.h conf.h dbg_tokens.h \
-  dbg_values.h version.h 
-malloc_lp.o : malloc_lp.c malloc.h 
-malloc_str.o : malloc_str.c malloc.h malloc_loc.h conf.h chunk.h dbg_values.h \
-  error.h malloc_str.h 
-malloc_t.o : malloc_t.c malloc.h 
-sample.o : sample.c malloc.h 
+chunk.o : chunk.c malloc_dbg.h malloc_loc.h chunk.h chunk_loc.h compat.h conf.h \
+  dbg_values.h error.h error_val.h heap.h version.h
+compat.o : compat.c malloc_dbg.h malloc_loc.h compat.h conf.h
+error.o : error.c malloc_dbg.h malloc_loc.h chunk.h compat.h conf.h dbg_values.h \
+  error.h
+heap.o : heap.c malloc_dbg.h malloc_loc.h chunk.h compat.h conf.h error.h error_val.h \
+  heap.h
+malloc.o : malloc.c malloc_dbg.h malloc_loc.h chunk.h compat.h conf.h dbg_values.h \
+  error.h error_str.h error_val.h heap.h malloc_lp.h
+malloc_dbg.o : malloc_dbg.c malloc_dbg.h malloc_loc.h compat.h conf.h dbg_tokens.h \
+  dbg_values.h version.h
+malloc_lp.o : malloc_lp.c malloc_dbg.h
+malloc_str.o : malloc_str.c malloc_dbg.h malloc_loc.h conf.h chunk.h dbg_values.h \
+  error.h malloc_str.h
+malloc_t.o : malloc_t.c malloc_dbg.h
+sample.o : sample.c malloc_dbg.h
