@@ -1,5 +1,5 @@
 -------------------------------------------------------------------------------
-$Id: README.1,v 1.16 1993/04/14 22:13:44 gray Exp $
+$Id: README.1,v 1.17 1993/04/15 21:57:53 gray Exp $
 -------------------------------------------------------------------------------
 
 INSTALLATION:
@@ -33,6 +33,10 @@ the gnu archive sites.
 QUICK NOTES:
 
 - the system is pretty dependent on a good ansi-c compiler like gcc.
+	non-ansi folks with have to:
+	- undefine the -Dconst="" line in the Makefile
+	- change stdarg.h and ... to varargs.h and va_alist, etc. in error.c
+	- possibly fix all the functions to remove the foo(char * var) decls.
 - the file Manifest contains a list of each of the file and what it does.
 - configure can be regenerated by the autoconf script.
 - the file sample.c contains an example of some of the malloc macros
