@@ -21,14 +21,14 @@
  *
  * The author of the program may be contacted at gray.watson@antaire.com
  *
- * $Id: compat.h,v 1.8 1993/04/14 22:13:53 gray Exp $
+ * $Id: compat.h,v 1.9 1993/04/15 21:58:02 gray Exp $
  */
 
 #ifndef __COMPAT_H__
 #define __COMPAT_H__
 
 #include "conf.h"			/* for HAVE... */
-#include "malloc.h"			/* for IMPORT ... */
+#include "malloc_dbg.h"			/* for IMPORT ... */
 
 /*<<<<<<<<<<  The below prototypes are auto-generated by fillproto */
 
