@@ -21,12 +21,12 @@
  *
  * The author of the program may be contacted at gray.watson@antaire.com
  *
- * $Id: conf.h.in,v 1.9 1993/04/06 04:24:30 gray Exp $
+ * $Id: conf.h.in,v 1.10 1993/04/15 21:58:04 gray Exp $
  */
 
 /*
  ************************************************************************
- * USER SETTINGS:
+ * MANUAL SETTINGS:
  ************************************************************************
  */
 
@@ -50,7 +50,7 @@
 
 /*
  ************************************************************************
- * SPECIAL DEFINES:
+ * CONFIGURE DEFINES:
  ************************************************************************
  */
 
@@ -79,9 +79,7 @@
 #define ALLOCATION_ALIGNMENT_IN_BITS 3
 
 /*
- ************************************************************************
  * LIBRARY DEFINES:
- ************************************************************************
  */
 
 /*
