@@ -21,14 +21,14 @@
  *
  * The author of the program may be contacted at gray.watson@antaire.com
  *
- * $Id: error.h,v 1.7 1993/04/05 22:30:08 gray Exp $
+ * $Id: error.h,v 1.8 1993/04/15 21:58:11 gray Exp $
  */
 
 #ifndef __ERROR_H__
 #define __ERROR_H__
 
 #include <stdarg.h>			/* for ... */
-#include "malloc.h"			/* for IMPORT */
+#include "malloc_dbg.h"			/* for IMPORT */
 
 /*<<<<<<<<<<  The below prototypes are auto-generated by fillproto */
 
