@@ -1,3 +1,11 @@
+Thu Apr 15 17:44:41 1993  Gray Watson  (gray at toaster.antaire.com)
+
+	* Renamed malloc.h to malloc_dbg.h and libmalloc.a to
+	libmalloc_dbg.a.  Added heap-extension checking and verification
+	to make sure no-one extends the heap using sbrk behind out back.
+	Fixed calloc to have the number of elements be a size_t to (WHY??
+	It's not a size!!).  Fixed malloc_t free problems.
+
 Wed Apr 14 18:11:00 1993  Gray Watson  (gray at toaster.antaire.com)
 
 	* Released version 1.2.2.
